--- a/css/style.css
+++ b/css/style.css
@@ -42,12 +42,28 @@ p{
     border-radius: 50%;
 }
 #bikinbg{
-    width: 500 px;
-    height: 200 px;
+    width: 500px;
+    height: 200px;
     background-color: brown;
     color: white;
+    background-image: url("../gambar/wlaa.jfif");
+    background-size: cover;
+    border-radius: 35px;
 }
 #bikinbg h2{
+    text-align: center;
+    padding-top: 80px;
+}
+#bikinpattern{
+    width: 500px;
+    height: 200px;
+    background-color: brown;
+    color:black;
+    background-image: url("../gambar/pola12.jpg");
+    border-radius: 35px;
+    background-repeat: repeat;
+}
+#bikinpattern h2{
     text-align: center;
     padding-top: 80px;
 }
